Implemented Quadtree for storing particle positions for better performance

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,12 @@ cgmath = "0.18.0"
 crossbeam = "0.8.2"
 env_logger = "0.9"
 getrandom = "0.2"
+lazy_static = "1.4.0"
 line_drawing = "1.0"
 log = "0.4"
 pcx = "0.2"
 pixels = "0.9.0"
+quadtree_rs = "0.1.2"
 rand = "0.8.5"
 randomize = "3.0"
 winit = "0.26"
