--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytemuck = { version = "1.14.0", features = ["derive"] }
+env_logger = "0.10.0"
+pollster = "0.3.0"
+rand = "0.8.5"
+wgpu = { version = "0.17.0", features = ["spirv"] }
+winit = "0.28.6"
